[project]
name = "vpython"
version = "0.1.0"
dependencies = []
requires-python = ">=3.11"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
vpython = "vpython.cli:main"


[tool.pdm.scripts]
post_install = { cmd = ["pre-commit", "install"], help = "install pre-commit hooks" }
check = { cmd = ["pre-commit", "run", "--all-files"], help = "execute linters" }

[tool.pylint.main]

jobs = 1

load-plugins = [
    "pylint.extensions.broad_try_clause",
    "pylint.extensions.code_style",
    "pylint.extensions.emptystring",
    "pylint.extensions.comparetozero",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.for_any_all",
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.bad_builtin",
    "pylint.extensions.mccabe",
    "pylint.extensions.docstyle",
    "pylint.extensions.check_elif",
    "pylint.extensions.empty_comment",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.docparams",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint.extensions.while_used",
    "pylint.extensions.dict_init_mutate",
    "pylint.extensions.dunder",
]

py-version = "3.11"

[tool.pylint.basic]

# Allow Django migrations name style.
module-rgx = "[^\\WA-Z][^\\WA-Z]*$"

good-names = ["i", "j", "k", "ex", "Run", "_", "db", "rf"]

[tool.pylint.format]

max-line-length = 127

[tool.pylint."messages control"]

disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "use-symbolic-message-instead",
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "too-many-ancestors",
]

[tool.flake8]
count = true
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
]
max-line-length = 127
show-source = true
statistics = true
max-complexity = 10
inline-quotes = "'"
multiline-quotes = "'''"
docstring-quotes = "\"\"\""
